--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
@@ -19,6 +20,8 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -27,7 +30,8 @@
     "react-router-dom": "^7.6.3",
     "react-select": "^5.10.2",
     "socket.io-client": "^4.8.1",
-    "sweetalert2": "^11.22.2"
+    "sweetalert2": "^11.22.2",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
