--- a/package.json
+++ b/package.json
@@ -13,23 +13,33 @@
     "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.2.0",
+    "@fontsource/cairo": "^5.2.6",
+    "@mui/icons-material": "^7.3.1",
     "@mui/lab": "^7.0.0-beta.14",
-    "@mui/material": "^7.2.0",
+    "@mui/material": "^7.3.1",
+    "@mui/x-date-pickers": "^8.10.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
+    "i18next": "^25.3.6",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-select": "^5.10.2",
     "socket.io-client": "^4.8.1",
+    "stylis-plugin-rtl": "^2.1.1",
     "sweetalert2": "^11.22.2",
     "yup": "^1.7.0"
   },
